[gd_scene load_steps=55 format=2]

[ext_resource path="res://Shadows/MediumShadow.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Core/ComplexEnemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/StatueKnight/StatueKnight.png" type="Texture" id=3]
[ext_resource path="res://Enemies/StatueKnight/StatueKnightSwordHitbox.tres" type="Shape2D" id=4]
[ext_resource path="res://WhiteColor.shader" type="Shader" id=5]
[ext_resource path="res://Hitboxes and Hurtboxes/Hitbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemies/StatueKnight/StatueKnight.gd" type="Script" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 5.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.818
height = 14.731

[sub_resource type="CircleShape2D" id=3]
radius = 128.0

[sub_resource type="CircleShape2D" id=4]
radius = 6.0

[sub_resource type="ShaderMaterial" id=5]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/active = false

[sub_resource type="CapsuleShape2D" id=6]
radius = 4.214
height = 10.607

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "AttackLeft"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "AttackDown"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "AttackRight"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "AttackUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=11]
blend_point_0/node = SubResource( 7 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 8 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 9 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 10 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "IdleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=16]
blend_point_0/node = SubResource( 12 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 13 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 14 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 15 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "RollLeft"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "RollUp"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "RollRight"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "RollDown"

[sub_resource type="AnimationNodeBlendSpace2D" id=21]
blend_point_0/node = SubResource( 17 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 18 )
blend_point_1/pos = Vector2( 0, -1.1 )
blend_point_2/node = SubResource( 19 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 20 )
blend_point_3/pos = Vector2( 0, 1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "RunLeft"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "RunDown"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "RunRight"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "RunUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=26]
blend_point_0/node = SubResource( 22 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 23 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 24 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 25 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachine" id=33]
resource_local_to_scene = true
states/Attack/node = SubResource( 11 )
states/Attack/position = Vector2( 216, 223 )
states/Idle/node = SubResource( 16 )
states/Idle/position = Vector2( 216, 122 )
states/Roll/node = SubResource( 21 )
states/Roll/position = Vector2( 216, 3 )
states/Run/node = SubResource( 26 )
states/Run/position = Vector2( 518, 122 )
transitions = [ "Idle", "Run", SubResource( 27 ), "Run", "Idle", SubResource( 28 ), "Idle", "Attack", SubResource( 29 ), "Attack", "Idle", SubResource( 30 ), "Idle", "Roll", SubResource( 31 ), "Roll", "Idle", SubResource( 32 ) ]
start_node = "Idle"
graph_offset = Vector2( -286, 56 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=34]

[sub_resource type="Animation" id=35]
resource_name = "AttackDown"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SwordHitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwordHitboxPivot/SwordHitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.923, 19.195 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0 ],
"method": "pivot"
}, {
"args": [  ],
"method": "finish_attack"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SwordHitboxPivot:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=36]
resource_name = "AttackLeft"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SwordHitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwordHitboxPivot/SwordHitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3.834, 16.516 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 90 ],
"method": "pivot"
}, {
"args": [  ],
"method": "finish_attack"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SwordHitboxPivot:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}

[sub_resource type="Animation" id=37]
resource_name = "AttackRight"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SwordHitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwordHitboxPivot/SwordHitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2.623, 15.924 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 270 ],
"method": "pivot"
}, {
"args": [  ],
"method": "finish_attack"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SwordHitboxPivot:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 270.0 ]
}

[sub_resource type="Animation" id=38]
resource_name = "AttackUp"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SwordHitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwordHitboxPivot/SwordHitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.422, 8.542 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 180 ],
"method": "pivot"
}, {
"args": [  ],
"method": "finish_attack"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SwordHitboxPivot:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}

[sub_resource type="Animation" id=39]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0 ],
"method": "pivot"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwordHitboxPivot/SwordHitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.923, 19.195 ) ]
}

[sub_resource type="Animation" id=40]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 90 ],
"method": "pivot"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwordHitboxPivot/SwordHitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3.834, 16.516 ) ]
}

[sub_resource type="Animation" id=41]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 270 ],
"method": "pivot"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwordHitboxPivot/SwordHitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2.623, 15.924 ) ]
}

[sub_resource type="Animation" id=42]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 180 ],
"method": "pivot"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwordHitboxPivot/SwordHitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.422, 8.542 ) ]
}

[sub_resource type="Animation" id=43]
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0 ],
"method": "pivot"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwordHitboxPivot/SwordHitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.923, 19.195 ) ]
}

[sub_resource type="Animation" id=44]
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 90 ],
"method": "pivot"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwordHitboxPivot/SwordHitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3.834, 16.516 ) ]
}

[sub_resource type="Animation" id=45]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 270 ],
"method": "pivot"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwordHitboxPivot/SwordHitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2.623, 15.924 ) ]
}

[sub_resource type="Animation" id=46]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 180 ],
"method": "pivot"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwordHitboxPivot/SwordHitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.422, 8.542 ) ]
}

[sub_resource type="CapsuleShape2D" id=47]
radius = 21.766
height = 4.435

[node name="StatueKnight" instance=ExtResource( 2 )]
collision_mask = 3
script = ExtResource( 7 )
MAX_SPEED = 40
KNOCKBACK_AMOUNT = 30

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource( 1 )

[node name="Hurtbox" parent="." index="1"]
visible = false

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
visible = false
position = Vector2( -0.417, -11.686 )
shape = SubResource( 2 )

[node name="Stats" parent="." index="2"]
max_health = 3

[node name="PlayerDetectionArea" parent="." index="3"]
PLAYER_STICKINESS_MULTIPLIER = 5.0

[node name="CollisionShape2D" parent="PlayerDetectionArea" index="0"]
shape = SubResource( 3 )

[node name="SoftCollision" parent="." index="4"]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
visible = false
shape = SubResource( 4 )

[node name="ShadowSprite" parent="." index="6"]
texture = ExtResource( 1 )
offset = Vector2( -0.706, 2.117 )

[node name="Sprite" parent="." index="7"]
material = SubResource( 5 )
texture = ExtResource( 3 )
offset = Vector2( 0, -12 )
hframes = 36
frame = 15

[node name="Hitbox" parent="." index="8"]
visible = false
damage = 0

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0.077, -9.615 )
shape = SubResource( 6 )
disabled = true

[node name="AnimationTree" parent="." index="10"]
tree_root = SubResource( 33 )
parameters/playback = SubResource( 34 )

[node name="AnimationPlayer" parent="." index="11"]
anims/AttackDown = SubResource( 35 )
anims/AttackLeft = SubResource( 36 )
anims/AttackRight = SubResource( 37 )
anims/AttackUp = SubResource( 38 )
anims/IdleDown = SubResource( 39 )
anims/IdleLeft = SubResource( 40 )
anims/IdleRight = SubResource( 41 )
anims/IdleUp = SubResource( 42 )
anims/RunDown = SubResource( 43 )
anims/RunLeft = SubResource( 44 )
anims/RunRight = SubResource( 45 )
anims/RunUp = SubResource( 46 )

[node name="PlayerClose" type="Area2D" parent="." index="14"]
visible = false
position = Vector2( 0, -14.069 )
rotation = -1.5708
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerClose" index="0"]
position = Vector2( -5.582, -0.005 )
shape = SubResource( 47 )

[node name="SwordHitboxPivot" type="Position2D" parent="." index="15"]
position = Vector2( 0, -14.069 )
rotation = 4.71239

[node name="SwordHitbox" parent="SwordHitboxPivot" index="0" instance=ExtResource( 6 )]
position = Vector2( -2.623, 15.924 )
rotation = 1.5708
collision_mask = 4
damage = 2

[node name="CollisionShape2D" parent="SwordHitboxPivot/SwordHitbox" index="0"]
shape = ExtResource( 4 )
disabled = true

[node name="PlayerWithinRange" type="Area2D" parent="SwordHitboxPivot" index="1"]
visible = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordHitboxPivot/PlayerWithinRange" index="0"]
rotation = 1.5708
shape = ExtResource( 4 )
[connection signal="area_entered" from="PlayerClose" to="." method="_on_PlayerClose_area_entered"]
[connection signal="area_exited" from="PlayerClose" to="." method="_on_PlayerClose_area_exited"]
[connection signal="area_entered" from="SwordHitboxPivot/PlayerWithinRange" to="." method="_on_PlayerWithinRange_area_entered"]
[connection signal="area_exited" from="SwordHitboxPivot/PlayerWithinRange" to="." method="_on_PlayerWithinRange_area_exited"]

[editable path="Hurtbox"]

[editable path="PlayerDetectionArea"]

[editable path="SoftCollision"]

[editable path="Hitbox"]

[editable path="SwordHitboxPivot/SwordHitbox"]
